<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootWelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="28dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.85"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="22dp"
        android:text="@string/welcome_sub"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ver_instr" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_continuar" />
</LinearLayout>
